# StateBench

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: Boost.cmake  Install.cmake  Qt.cmake
src/: CMakeLists.txt
src/infrastructure/: CMakeLists.txt  infrastructure.cpp
src/infrastructure/include/infrastructure/: infrastructure.h
test/infrastructure/: CMakeLists.txt  infrastructure_test.cpp
